# secure-edit

./: Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs  secure.rs  tests.rs
