[package]
name = "secure-edit"
version = "0.3.1"
edition = "2021"
authors = ["Sean McConnachie <seanjulian.mcc@gmail.com>"]
description = "Simple file encryption cli with versioning."
license = "GPL-3.0"
repository = "https://github.com/Sean-McConnachie/secure-edit"

[dependencies]
aes = "0.8.1"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand_core = { version = "0.6", features = ["std"] }
anyhow = "1.0.89"
sha2 = "0.10.8"
clap = { version = "4.5.19", features = ["derive"] }
colored = "2.1.0"
rpassword = "0.0.4"
